--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <h3>Social Profiles</h3>
       <div class="social-links">
         
-        <a href="https://www.instagram.com/yash_balwaniii/">Instagram</a>
+        <a href=#>Instagram</a>
     
       </div>
     </section>
