--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
       <h3>Social Profiles</h3>
       <div class="social-links">
         
-        <a href=#>Instagram</a>
+        <a href="https://www.instagram.com/yash_balwaniii?igsh=MXZrZXRiaDdpNGNlZw%3D%3D&utm_source=qr">Instagram</a>
+        <a href="https://t.me/YASHBALWANI">Telegram</a>
     
       </div>
     </section>
